<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="app_name">Latch</string>
    <string name="row_locked">locked</string>
    <string name="row_lock_all">Lock all</string>
    <string name="row_all_locked">All locked</string>
    <string name="latchon_off">"Slide
to unlock"</string>
    <string name="latchon_on">"Slide
to lock all"</string>
    <string name="latchon_single_off">"Slide
to unlock"</string>
    <string name="latchon_single_on">"Slide
to lock"</string>
    <string name="ok">OK</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="locked">locked</string>
    <string name="unlocked">unlocked</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="cont">Continue</string>
    <string name="a_signin">Sign in</string>
    <string name="a_page0_welcome">Discover Latch</string>
    <string name="a_page0_slide">Slide to learn how to protect your accounts and register</string>
    <string name="a_page1_title">Get control over your digital life</string>
    <string name="a_page1_subtitle">"Switch off your email, online banking and social networks when you aren't using them"</string>
    <string name="a_page2_title">Have your favorite services integrated Latch?</string>
    <string name="a_page2_subtitle">Check with your provider and pair from its website</string>
    <string name="a_page3_title">You can set up the security to your needs</string>
    <string name="a_page3_subtitle">Configure the protection of your services according to your needs</string>
    <string name="a_page4_title">Latch alerts you of any attempt to access a locked service</string>
    <string name="a_page4_subtitle">Latch prevents unauthorized use</string>
    <string name="a_page5_welcome">Start protecting your services with Latch</string>
    <string name="a_page5_content1">Have an account?</string>
    <string name="a_page5_register">No, register</string>
    <string name="a_page5_signin">Yes, sign in</string>
    <string name="a_page5_content2">Questions?</string>
    <string name="a_page5_contact">Contact us</string>
    <string name="b2_version">Android Version</string>
    <string name="b2_login_user">email address</string>
    <string name="b2_login_pass">password</string>
    <string name="b2_forgot_pass">Forgot your password?</string>
    <string name="b2_signin">Sign in</string>
    <string name="b2_login_messageDialog">Signing in…</string>
    <string name="b2_login_undefinedError">There was an error during the server connection</string>
    <string name="b2_login_toastUserError">Incorrect username or password</string>
    <string name="b2_toastUserEmpty">The username field cannot be empty</string>
    <string name="b2_toastPassEmpty">The password field cannot be empty</string>
    <string name="b2_toastUserNotEmail">You should enter a valid email address</string>
    <string name="b2_noaccount">"Don't have an account?"</string>
    <string name="b2_register">Register</string>
    <string name="b3_page2_subtitle">Check with your provider and, to add a service, pair it from its website. To erase it, unpair it</string>
    <string name="b3_page3_subtitle">Set up the protection of your services to match your needs on the service details screen</string>
    <string name="b3_page4_title">Latch will alert you of access attempts to your services</string>
    <string name="b3_page4_subtitle">Set up your notifications to prevent unauthorized access</string>
    <string name="b3_page5_title">Turn on autopilot</string>
    <string name="b3_page5_subtitle">Schedule the automatic protection of your accounts by night or during custom times</string>
    <string name="b3_page6_title">Autolock for the forgetful</string>
    <string name="b3_page6_subtitle">"Now you don't have to remember to lock your services after using them. Latch does it for you"</string>
    <string name="b3_page7_title">Just in case and for the unexpected...</string>
    <string name="b3_page7_subtitle">Latches can be modified by the service provider when you need it</string>
    <string name="b3_page8_title">Change the name of your services and operations</string>
    <string name="b3_page8_subtitle">To rename your services and operations tap on their name at the top of the screen</string>
    <string name="b3_page9_title">Reorder your service list</string>
    <string name="b3_page9_subtitle">Tap on the service name for a few seconds and drag it to where you want it to be</string>
    <string name="c_actionbar_title">Add service</string>
    <string name="c_actionbar_subtitle">Pairing code</string>
    <string name="c_information">"Tap the button when you're ready to enter the code into the website of the service you want to pair."</string>
    <string name="c_information_after">Enter this code into the website of the service you are pairing with Latch. Expires in one minute.</string>
    <string name="c_button_gettoken">Generate new code</string>
    <string name="c_dialog_newtoken">Generating a new code…</string>
    <string name="c_button_learn">How does pairing work?</string>
    <string name="c_seconds_left">%1$d sec</string>
    <string name="c_progressbar_max">60000</string>
    <string name="c_progressbar_progress">15</string>
    <string name="c2_actionbar_title">New service</string>
    <string name="c2_setupnow">Set up now</string>
    <string name="c2_setuplater">Set up later</string>
    <string name="c2_content">The service is still unlocked. Now you can set it to add an additional level of security.</string>
    <string name="c2_subtitle">successfully paired.</string>
    <string name="c2_disabled_actionbar_title">Disabled service</string>
    <string name="c2_disabled_subtitle">it has been paired, but the provider has temporarily disabled this protection.</string>
    <string name="c2_disabled_subtitle2">protection of the service with Latch has been temporarily disabled.</string>
    <string name="c2_disabled_content">Please, contact your service provider and specify code %s.</string>
    <string name="c2_disabled_footer">Consult your updated service list by tapping on this button.</string>
    <string name="c2_multi_content">You already have a service with this name. Rename it now or later by tapping on the service name on the service details screen.</string>
    <string name="g2_terms_title">License agreement</string>
    <string name="g2_terms_content">"Using Latch is subject to the ElevenPaths' User License Agreement and the Latch Terms of Use. You can review these at:"</string>
    <string name="g2_terms_button">User License Agreement</string>
    <string name="g2_terms_third">Third-Party Licenses</string>
    <string name="g2_conditions_button">Latch Terms of Use</string>
    <string name="g2_about_title">The safety switch for your digital life</string>
    <string name="g2_about_content">"Latch is a mobile service that lets you add an extra level of security to your online accounts and services.

To prevent any unauthorized use, Latch gives you the control to lock your services with a single tap when you aren't using them.

Simple. Security and control with a single tap."</string>
    <string name="g2_about_footer">Version</string>
    <string name="g2_about_footer_copyright">"Copyright %d ElevenPaths.
All rights reserved."</string>
    <string name="g2_support_title">Information</string>
    <string name="g2_support_content">Have you checked our FAQ?</string>
    <string name="g2_support_button1">See Frequently Asked Questions</string>
    <string name="g2_support_subcontent">Questions? Comments? Need help?</string>
    <string name="g2_support_contactus">Contact us</string>
    <string name="settings_password_askingtime">Ask for password</string>
    <string name="settings_sound_notification">Notification sounds</string>
    <string name="settings_unlock_notification">Report access to unlocked services</string>
    <string name="settings_time_autolock">Autolock time</string>
</resources>