<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/g_text_big" android:textStyle="bold" android:textColor="@color/legal_title" android:id="@id/g2_support_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/g_margin_generic" android:layout_marginTop="@dimen/g_margin_generic" android:layout_marginRight="@dimen/g_margin_generic" android:text="@string/g2_support_title" />
    <TextView android:textSize="@dimen/g_text_middle" android:textColor="@color/legal_content" android:id="@id/g2_support_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/g_margin_generic" android:layout_marginTop="@dimen/g_margin_top" android:layout_marginRight="@dimen/g_textview_content_margin_lateral" android:text="@string/g2_support_content" />
    <Button android:textSize="@dimen/g_text_button_biggest" android:textColor="@color/white" android:id="@id/g2_support_url" android:background="@drawable/button_green_border_back" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/g_margin_generic" android:layout_marginTop="@dimen/g_margin_top" android:layout_marginRight="@dimen/g_margin_generic" android:text="@string/g2_support_button1" />
    <TextView android:textSize="@dimen/g_text_middle" android:textColor="@color/legal_content" android:id="@id/g2_support_subcontent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/g_margin_generic" android:layout_marginTop="@dimen/g_margin_generic" android:layout_marginRight="@dimen/g_margin_generic" android:text="@string/g2_support_subcontent" />
    <Button android:textSize="@dimen/g_text_button_biggest" android:textColor="@color/white" android:id="@id/g2_button_contactus" android:background="@drawable/button_green_border_back" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/g_margin_generic" android:layout_marginTop="@dimen/g_margin_top" android:layout_marginRight="@dimen/g_margin_generic" android:text="@string/g2_support_contactus" />
</LinearLayout>