<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/g_text_big" android:textStyle="bold" android:textColor="@color/legal_title" android:id="@id/g2_terms_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/g_margin_generic" android:layout_marginTop="@dimen/g_margin_generic" android:layout_marginRight="@dimen/g_margin_generic" android:text="@string/g2_terms_title" />
    <TextView android:textSize="@dimen/g_text_middle" android:textColor="@color/legal_content" android:id="@id/g2_terms_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/g_margin_generic" android:layout_marginTop="@dimen/g_margin_top" android:layout_marginRight="@dimen/g_margin_generic" android:text="@string/g2_terms_content" />
    <Button android:textSize="@dimen/g_text_button_biggest" android:textColor="@color/white" android:id="@id/g2_terms_url_eula" android:background="@drawable/button_green_border_back" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/g_margin_generic" android:layout_marginTop="@dimen/g_margin_top" android:layout_marginRight="@dimen/g_margin_generic" android:text="@string/g2_terms_button" />
    <Button android:textSize="@dimen/g_text_button_biggest" android:textColor="@color/white" android:id="@id/g2_terms_url_terms" android:background="@drawable/button_green_border_back" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/g_margin_generic" android:layout_marginTop="@dimen/g_margin_top" android:layout_marginRight="@dimen/g_margin_generic" android:text="@string/g2_conditions_button" />
    <Button android:textSize="@dimen/g_text_button_biggest" android:textColor="@color/white" android:id="@id/g2_terms_thirdparty" android:background="@drawable/button_green_border_back" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/g_margin_generic" android:layout_marginTop="@dimen/g_margin_top" android:layout_marginRight="@dimen/g_margin_generic" android:text="@string/g2_terms_third" />
</LinearLayout>