<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/g_text_big" android:textStyle="bold" android:textColor="@color/legal_title" android:id="@id/g2_about_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/g_margin_generic" android:layout_marginTop="@dimen/g_margin_generic" android:layout_marginRight="@dimen/g_margin_generic" android:text="@string/g2_about_title" android:lineSpacingExtra="@dimen/g_textview_content_linespacing" />
    <TextView android:textSize="@dimen/g_text_middle" android:textColor="@color/legal_content" android:id="@id/g2_about_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/g_margin_generic" android:layout_marginTop="@dimen/g_margin_top" android:layout_marginRight="@dimen/g_margin_generic" android:text="@string/g2_about_content" android:layout_below="@id/g2_about_title" android:lineSpacingExtra="@dimen/g_textview_content_linespacing" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/g_margin_generic" android:layout_marginBottom="@dimen/g_margin_generic" android:layout_below="@id/g2_about_content" android:layout_alignParentBottom="true">
        <TextView android:textSize="@dimen/g_text_little" android:textColor="@color/dark_grey" android:id="@id/g2_about_footer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/g_margin_generic" android:layout_marginRight="@dimen/g_margin_generic" android:layout_marginBottom="@dimen/g_margin_top" android:text="@string/g2_about_footer" />
        <TextView android:textSize="@dimen/g_text_little" android:textColor="@color/dark_grey" android:id="@id/g2_about_footercopyright" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/g_margin_generic" android:layout_marginTop="3.0dip" android:layout_marginRight="@dimen/g_margin_generic" android:text="@string/g2_about_footer_copyright" />
    </LinearLayout>
</RelativeLayout>